[package]
name = "axum-nest-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
okapi = "0.4.0"
tokio = { version = "1.32.0", features = ["full"] }
crate1 = { path = "./crate1" }
crate2 = { path = "./crate2" }

[workspace]
members = ["crate1", "crate2"]
